# Core3D

./: CMakeLists.txt  Core3D.in  README.md
.github/workflows/: cmake-build.yml
cmake/: Core3DConfig.cmake  Core3DConfig.cmake.in  InstallConfigurations.cmake  LibraryConfigurations.cmake
examples/: BasicDemo.cpp  CMakeLists.txt
examples/BasicDemo/: main.cpp
include/Core3D/: Common.h  Core3D.h  GraphicsContext.h  Math.h  Mesh.h
src/: CMakeLists.txt  GraphicsContext.cpp  Mesh.cpp
src/Backends/OpenGL/: GLBackend.cpp  GLBackend.h
